--- a/templates/polls/detail.html
+++ b/templates/polls/detail.html
@@ -1,12 +1,22 @@
 {% extends "base.html"%}
 {% block title %}Detail{% endblock %}
-% block content %}
-
+{% block content %}
+    <a class="btn btn-secondary" href="{% url 'polls:index'%}" >Back To Polls</a>
     <h1>{{ question.question_text}}</h1>
-    {% if error_message %}<p>error_message</p>{% endif%}
 
-    <form>
-        {%csrf_token %}
-    </form>
+    {% if error_message %}
+    <p>
+        <strong>{{error_message}}</strong>
+    </p>
+    {% endif %}
+
+    <form action="{% url 'polls:vote' question.id %}" method="post">
+    {% csrf_token %}
+    {% for choice in question.choice_set.all %}
+        <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+        <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
+    {% endfor %}    
+    <input type="submit" value="Vote">
+    </form>  
 {% endblock %}
 
