--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -1,15 +1,19 @@
 {% extends "base.html"%}
 {% block title %}Index{% endblock %}
 {% block content %}
+    <h1 class="text-center mb-3">Poll Question</h1>
     {% if latest_question_list %}
-    <ul>
+    <ul class="list-unstyled">
         {% for question in latest_question_list %}
             <li>
-                <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+                <p>{{ question.question_text }}</p>
+                <a class="btn btn-primary" href="{% url 'polls:detail' question.id %}">Vote</a>
+                <a class="btn btn-secondary" href="{% url 'polls:results' question.id %}" >Results</a>
             </li>
         {% endfor %}
     </ul>
+    
     {% else %}
     <p> No polls are available.</p>
-    {% endif%}    
+    {% endif %}    
 {% endblock %}
